<resources>
    <string name="app_name">ClientList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CRM</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="client">Client</string>


    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="tel">Telephone</string>
    <string name="B2B" translatable="false">B2B</string>
    <string name="B2G" translatable="false">B2G</string>
    <string name="B2C" translatable="false">B2C</string>
    <string name="notes">Info</string>
    <string name="vip">VIP</string>
    <string name="types_clients">Type client</string>
    <string name="settings">Settings</string>
    <string name="web_page">Web page</string>
    <string name="tools">Tools</string>
    <string name="edit_client">Edit</string>
    <string name="delete_client">Delete</string>
    <string name="delete_message">Delete message?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="settings_text">Settings text</string>
    <string name="settings_color_text">Text color</string>
    <string name="settings_color_text_key">Settings_color_text_key</string>
    <string name="search">Search</string>
    <string name="company">Company</string>
</resources>